[package]

	name          = "actix"
	version       = "0.8.0"
	authors       = ["Nikolay Kim <fafhrd91@gmail.com>"]
	description   = "Actor framework for Rust"
	readme        = "README.md"
	keywords      = ["actor", "futures", "actix", "async", "tokio"]
	homepage      = "https://actix.rs"
	repository    = "https://github.com/actix/actix.git"
	documentation = "https://docs.rs/actix/"
	categories    = ["network-programming", "asynchronous"]
	license       = "MIT/Apache-2.0"
	exclude       = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
	edition       = "2018"


[badges]

	travis-ci = { repository = "actix/actix", branch = "master" }
	appveyor  = { repository = "fafhrd91/actix-n9e64" }
	codecov   = { repository = "actix/actix", branch = "master", service = "github" }


[lib]

	name = "actix"
	path = "src/lib.rs"


[workspace]

	members = ["examples/chat"]


[features]

	wasm  = [ "actix-rt/wasm" ]

	# Adds assertion to prevent processing too many messages on event loop
	mailbox_assert = []

[dependencies]

	actix-rt          = { path = "../actix-net/actix-rt" }

	actix_derive      = "0.4"
	bytes             = "0.4"
	crossbeam-channel = "0.3"
	derive_more       = "0.14.0"
	futures           = "0.1"
	hashbrown         = "0.1.8"
	log               = "0.4"
	lazy_static       = "1.2"
	bitflags          = "1.0"
	smallvec          = "0.6"
	parking_lot       = "0.7"
	tokio-timer       = "0.2.8"

[profile.release]

	lto           = true
	opt-level     = 3
	codegen-units = 1
