[package]

	name    = "actix_wasm_example"
	version = "0.1.0"
	authors = [ "Naja Melan <najamelan@autistici.org>" ]
	edition = "2018"


[lib]

	crate-type = [ "cdylib" ]
	path       = "src/entrypoint.rs"


[dependencies]

	actix                = { path = "../../.", features = [ "wasm" ], default-features = false }

	futures              = "0.1.25"
	wasm-bindgen         = "0.2.38"


[dependencies.web-sys]

	version  = "0.3.14"

	features = [

		'console'     ,
		'Document'    ,
		'Element'     ,
		'HtmlElement' ,
		'Node'        ,
		'Window'      ,

	]
